tests/mm0_mmu/fail/bad-sort132.mm0
-- bad modifier order
pure provable strict sort s132;